# gpgpu-sim_distribution

./: .gitignore  .pre-commit-config.yaml  CHANGES  CMakeLists.txt  COPYRIGHT  Jenkinsfile  Makefile  README.md  bitbucket-pipelines.yml  checkpoint.md  gen_setup_environment.cmake  gpgpusim_check.cmake  groovy-html.nightly.success.template  groovy-html.success.template  new  run-clang-format.py  setup_environment  short-tests-cmake.sh  version_detection.mk
.github/workflows/: cmake.yml  main.yml  sst_integration.yml
aerialvision/: configs.py  guiclasses.py  lexyacc.py  lexyaccbookmark.py  lexyacctexteditor.py  organizedata.py  parser.out  parsetab.py  startup.py  variableclasses.py
configs/deprecated-cfgs/GTX480/: config_fermi_islip.icnt  gpgpusim.config
configs/deprecated-cfgs/GeForceGTX750Ti/: config_fermi_islip.icnt  gpgpusim.config  gpuwattch_gtx750Ti.xml
configs/deprecated-cfgs/QuadroFX5600/: gpgpusim.config  gpuwattch_quadrofx5600.xml  icnt_config_islip.icnt
configs/deprecated-cfgs/QuadroFX5800/: config_quadro_islip.icnt  gpgpusim.config
configs/deprecated-cfgs/SM6_GTX1080/: config_fermi_islip.icnt  gpgpusim.config  gpgpusim.config.orig
configs/deprecated-cfgs/SM6_P100/: config_fermi_islip.icnt  gpgpusim.config
configs/deprecated-cfgs/SM6_TITANX/: config_fermi_islip.icnt  gpgpusim.config
configs/deprecated-cfgs/SM7_TITANV/: config_fermi_islip.icnt  gpgpusim.config
configs/deprecated-cfgs/TeslaC2050/: config_fermi_islip.icnt  gpgpusim.config
configs/tested-cfgs/SM100_GCN3/: gpgpusim.config
configs/tested-cfgs/SM2_GTX480/: config_fermi_islip.icnt  gpgpusim.config
configs/tested-cfgs/SM3_KEPLER_TITAN/: config_kepler_islip.icnt  gpgpusim.config
configs/tested-cfgs/SM6_TITANX/: accelwattch_sass_sim_alt.xml  config_pascal_islip.icnt  gpgpusim.config
configs/tested-cfgs/SM75_RTX2060/: config_turing_islip.icnt  gpgpusim.config
configs/tested-cfgs/SM75_RTX2060_S/: accelwattch_sass_sim.xml  gpgpusim.config
configs/tested-cfgs/SM7_GV100/: accelwattch_ptx_sim.xml  accelwattch_ptx_sim_alt.xml  accelwattch_sass_hw.xml  config_volta_islip.icnt  gpgpusim.config
configs/tested-cfgs/SM7_QV100/: accelwattch_ptx_sim_alt.xml  accelwattch_sass_hybrid.xml  accelwattch_sass_sim_alt.xml  config_volta_islip.icnt  gpgpusim.config
configs/tested-cfgs/SM7_TITANV/: accelwattch_ptx_sim.xml  accelwattch_sass_hybrid.xml  accelwattch_sass_sim.xml  config_volta_islip.icnt  gpgpusim.config
configs/tested-cfgs/SM86_RTX3070/: config_ampere_islip.icnt  gpgpusim.config
configs/tested-cfgs/SM87_ORIN/: gpgpusim.config
configs/tested-cfgs/SM90_H100/: gpgpusim.config
cuobjdump_to_ptxplus/: Makefile  cuobjdumpInst.cc  cuobjdumpInstList.cc  cuobjdump_to_ptxplus.cc  elf.l  header.l  ptx.l  ptx.y  ptx_parser.h  sass.l  sass.y
debug_tools/WatchYourStep/ptxjitplus/: Makefile  (+1 more)
libcuda/: CMakeLists.txt  Makefile  cuda_api_object.h  cuda_runtime_api.cc
libopencl/: Makefile  nvopencl_wrapper.cc  opencl_runtime_api.cc
src/: CMakeLists.txt  Makefile  abstract_hardware_model.cc  abstract_hardware_model.h  gpgpusim_entrypoint.cc  statwrapper.cc  stream_manager.cc  trace.h  trace_streams.tup
src/accelwattch/: Niagara1_sharing_ST.xml  Penryn.xml  README  XML_Parse.cc  XML_Parse.h  Xeon.xml  fermi.xml  gpgpu.xml  gpgpu_sim_wrapper.cc  gpgpu_sim_wrapper.h  gpgpu_static.xml  makefile  mcpat.mk  mcpatXeonCore.mk  quadro.xml
src/accelwattch/cacti/: README  Ucache.cc  arbiter.cc  area.cc  area.h  bank.cc  basic_circuit.cc  cache.cfg  cacti.i  cacti.mk  component.cc  component.h  crossbar.cc  decoder.cc  decoder.h  highradix.cc  highradix.h  htree2.cc  main.cc  makefile  mat.cc  nuca.cc  parameter.cc  parameter.h  router.cc  subarray.cc  subarray.h  technology.cc  uca.cc  uca.h  wire.cc
src/cuda-sim/: CMakeLists.txt  Makefile  cuda-sim.cc  half.hpp  instructions.cc  ptx.l  ptx_ir.cc  ptx_ir.h  ptx_sim.h  ptxinfo.l  ptxinfo.y
src/gpgpu-sim/: CMakeLists.txt  Makefile  dram.cc  dram.h  gpu-cache.cc  gpu-cache.h  gpu-sim.cc  gpu-sim.h  l2cache.cc  l2cache.h  local_interconnect.cc  mem_fetch.cc  mem_fetch.h  mem_fetch_status.tup  mem_latency_stat.cc  mem_latency_stat.h  power_interface.cc  power_interface.h  power_stat.cc  power_stat.h  shader.cc  shader.h  stat-tool.cc  visualizer.cc
src/intersim2/: CMakeLists.txt  Makefile  batchtrafficmanager.cpp  batchtrafficmanager.hpp  booksim.hpp  buffer.cpp  buffer.hpp  buffer_state.cpp  buffer_state.hpp  channel.hpp  config_utils.cpp  config_utils.hpp  credit.cpp  flit.cpp  flit.hpp  flitchannel.cpp  flitchannel.hpp  globals.hpp  gputrafficmanager.cpp  gputrafficmanager.hpp  injection.cpp  injection.hpp  interconnect_interface.cpp  interconnect_interface.hpp  intersim_config.cpp  main.cpp  misc_utils.cpp  module.cpp  module.hpp  outputset.cpp  outputset.hpp  packet_reply_info.cpp  pipefifo.hpp  rng.c  routefunc.cpp  routefunc.hpp  stats.cpp  stats.hpp  traffic.cpp  traffic.hpp  (+4 more)
src/intersim2/allocators/: allocator.cpp  allocator.hpp  islip.cpp  islip.hpp  loa.cpp  maxsize.cpp  maxsize.hpp  pim.cpp  selalloc.cpp  selalloc.hpp  separable.cpp  separable.hpp  separable_input_first.cpp  separable_input_first.hpp  separable_output_first.cpp  separable_output_first.hpp  wavefront.cpp  wavefront.hpp
src/intersim2/arbiters/: arbiter.cpp  arbiter.hpp  matrix_arb.cpp  prio_arb.cpp  prio_arb.hpp  roundrobin_arb.cpp  roundrobin_arb.hpp  tree_arb.cpp
src/intersim2/examples/: cmeshconfig  dragonflyconfig  fattree_config  flatflyconfig  mesh88_lat  singleconfig  torus88
src/intersim2/networks/: anynet.cpp  anynet.hpp  cmesh.cpp  cmesh.hpp  dragonfly.cpp  dragonfly.hpp  fattree.cpp  fattree.hpp  flatfly_onchip.cpp  flatfly_onchip.hpp  fly.cpp  fly.hpp  kncube.cpp  kncube.hpp  network.cpp  network.hpp  qtree.cpp  qtree.hpp  tree4.cpp  tree4.hpp
src/intersim2/power/: buffer_monitor.cpp  buffer_monitor.hpp  power_module.cpp  power_module.hpp  switch_monitor.cpp  switch_monitor.hpp  techfile.txt
src/intersim2/routers/: chaos_router.cpp  chaos_router.hpp  event_router.cpp  event_router.hpp  iq_router.cpp  iq_router.hpp  router.cpp  router.hpp
(+94 files in other folders)
